style.css
/* General Styling */

body {
    margin: 0px;
    background-color: #E2E8F0;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;

    display: grid;
    grid-template: 1fr 6fr / 1fr 6fr;
}

h4 {
    margin-bottom: 0px;
}

hr {
    border-top: 1px solid #E2E8F0;
}

/*  Aside Styling   */

aside {
    background-color: #1992D4;
    padding: 20px 0px 0px 20px;

    display: grid;
    grid-row: 1/3;
}

.logo {
    font-size: 25px;
    color: #ffffff;

    display: grid;
    grid-template-columns: 1fr 3fr;
    justify-items: start;
    align-items: center;
}

.logo img {
    height: 50px;
    filter: invert(1);
}

nav a {
    font-size: 20px;
    text-indent: 15px;
    text-decoration: none;
    color: #ffffff;

    display: grid;
    grid-template-columns: 1fr 4fr;
    justify-items: start;
    align-items: center;
}

a[title="Settings"] {
    margin-top: 20px;
}

nav img {
    width: 30px;
    filter: invert(1);
    margin-left: 10px;
}

/* Header Styling */

header {
    background-color: #ffffff;
    padding-bottom: 10px;
    box-shadow: 0px 6px 10px #bcbcbc;

    display: grid;
    grid-template: 1fr 1fr / 4fr 2fr;
    align-items: center;
    justify-items: stretch;
    
}

.search {
    display: grid;
    grid-template-columns: 1fr 12fr;
    justify-items: right;
}

.search a {
    padding-right: 10px;
}

.search img {
    width: 25px;
}

.searchbar {
    width: 100%;
    overflow: hidden;
    border: 0px;
    background-color: #E2E8F0;
    border-radius: 25px;
}

.notification {
    padding-right: 50px;
    padding-left: 230px;

    display: grid;
    grid-template-columns: 0.2fr 0.2fr 1fr;
    align-items: center;
    justify-items: left;
}

.notification img {
    width: 25px;
}

.welcome {
    display: grid;
    grid-template-columns: 1fr 5fr;
    align-items: center;
}

.welcome p {
    font-weight: bold;
    margin-bottom: 0px;
}

.welcome h2 {
    margin-top: 0px;
}

.welcome img {
    height: 100px;
    padding-left: 75px;

    display: grid;
    justify-items: center;
}

.actions {
    padding-left: 50px;
    padding-right: 50px;

    display: grid;
    grid-template-columns: 0.2fr 0.3fr 0.2fr;
    gap: 30px;
    justify-items: center;
}

.actions button {
    color: #ffffff;
    border: 0;
    width: 120px;
    border-radius: 25px;
    background-color: #1992D4;
}

/* Main Styling */

main {
    display: grid;
    grid-template: 1fr 1fr / 2fr 1fr;
}

.title {
    grid-column: 1 / -1;
}

.projects {
    padding: 10px;

    display: grid;
    grid-row: 1 / span 2;
    gap: 10px;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    grid-auto-rows: max-content;
}

.project {
    padding: 15px;
    border-radius: 10px;
    background-color: #ffffff;
    border-left: #F0B429;
    border-left-width: 10px;
    border-left-style: solid;
}

.buttons {
    display: grid;
    grid-template-columns: 1fr 0.2fr 0.2fr;
    justify-items: right;
}

.buttons button {
    width: 35px;
    background-color: #ffffff00;
    border: none;
}

.annoucements {
    padding: 10px;

    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    grid-auto-rows: max-content;
}

.annoucement {
    padding: 25px;
    background-color: #ffffff;;
    border-radius: 25px;
}

.trends {
    padding: 10px;

    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    grid-auto-rows: max-content;
}

.trend {
    padding: 25px;
    background-color: #ffffff;;
    border-radius: 25px;
}

.userframe {
    display: grid;
    grid-template-columns: 1fr 5fr;
    align-items: center;
}

.user {
    height: 65px;
}

